--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
+    "dotenv": "^16.0.2",
     "eslint": "^8.23.1",
+    "express": "^4.18.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
-    "@types/node": "^18.7.18"
+    "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.7.18",
+    "morgan": "^1.10.0"
   }
 }
