--- a/package.json
+++ b/package.json
@@ -27,16 +27,24 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
     "eslint": "^8.23.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
+    "typeorm": "^0.3.10",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.18",
     "morgan": "^1.10.0"
